--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://angurodon.github.io/neko/",
+  "homepage": "https://angurodon.github.io/",
   "eslintConfig": {
     "extends": [
       "react-app",
